# ENIGMA-School

C/BallMovingSDL/: CMakeLists.txt  main.c
C/CasseBrique/: CMakeLists.txt
C/CasseBrique/inc/: ball.h  brick.h  commons.h  debris.h  game_defs.h  game_structs.h  hud.h  level.h  main.h  paddle.h  particle.h  powerup.h  score_item.h  transition.h
C/CasseBrique/inc/stds/: animation.h  background.h  button.h  collision.h  draw.h  game.h  init.h  input.h  particle_system.h  sound.h  stddefine.h  stds.h  structs.h  text.h  trail.h
C/CasseBrique/res/level_data/: level_1.txt  level_2.txt  level_5.txt
C/CasseBrique/src/: ball.c  brick.c  debris.c  hud.c  level.c  main.c  paddle.c  particle.c  powerup.c  score_item.c  transition.c
C/CasseBrique/src/stds/: animation.c  background.c  button.c  collision.c  draw.c  game.c  init.c  input.c  particle_system.c  sound.c  stds.c  text.c  trail.c
C/HelloSDL2/: CMakeLists.txt  main.c
C/Pendu/: CMakeLists.txt  dico.c  dico.h  main.c  wordList.txt
C/Printables/: CMakeLists.txt  main.c
C/PuissanceFour/: CMakeLists.txt  display.c  game.c  game.h  grid.c  grid.h  init.h  main.c
C/Pyramides/: CMakeLists.txt  main.c
C/cardsgame/: CMakeLists.txt  ansi.h  main.c  main.h
C/tictactoe/: main.c
Java/BatailleNavale-Console/src/bo/: AttackBoard.java  Display.java  Player.java  PlayerBoard.java  Ship.java
Java/BatailleNavale-Console/src/go/: Main.java
Java/BatailleNavale-Graphique/src/bo/: AutoPlayer.java  Coordonnee.java  GraphicalGrid.java  GraphicalNavalGrid.java  GraphicalPlayer.java  NavalGrid.java  Player.java  PlayerWindow.java  PlayerWithGrid.java  Ship.java  ShipPlacementWindow.java  TextualPlayer.java
Java/BatailleNavale-Graphique/src/go/: Main.java
Python/GameOfLife/: main.py
Python/Labyrinthe/: BiDirectional.py  binaryTree.py  breadth.py  depth.py  imperfect.py  main.py
Python/Labyrinthe/src/: algorithm.py  cell.py  maze.py  maze_manager.py  maze_viz.py  solver.py
Python/Plateau/: Button.py  Dice.py  Label.py  Player.py  main.py  test.py
Web/FirstPage/: planning.html
Web/javascript/: package-lock.json  package.json
Web/javascript/src/: App.js  TodoItems.js  TodoList.js
(+20 files in other folders)
